# BrightTable

./: .gitignore  CMakeLists.txt  README.md  test.cmake  test.html
camera/: CMakeLists.txt  camera.cpp  camera.hpp  kinect-camera.cpp  kinect-camera.hpp  kinect-sensor.cpp  kinect-sensor.hpp
camera/hal/: README  depth_registration.cpp  depth_registration_cpu.cpp  depth_registration_cpu.h  depth_registration_opencl.cpp  depth_registration_opencl.h
cmake/: FindJsoncpp.cmake
hand-detector/: CMakeLists.txt  test-files.cpp
hand-detector-bin/: CMakeLists.txt  main.cpp
hand-detector-server/: BoundedBuffer.hpp  CMakeLists.txt  main.cpp  options.cpp  options.hpp  services.cpp  services.hpp
hand-detector/vision/: cv-debugging.cpp  cv-debugging.hpp  cv-helper.cpp  cv-helper.hpp  hand-detection-json.cpp  hand-detection.cpp  hand-detection.hpp  quad-transform.cpp  quad-transform.hpp  screen-detection.cpp  screen-detection.hpp
ps-eye/: CMakeLists.txt  main.cpp
src/: HandDetection.h  HandDetection.hpp  cv-helper.cpp  cvhelpers.cpp  detect-screen.cpp  hand-detection.cpp  hand-detection.hpp  handcontour-json.cpp  handcontour.cpp  main.cpp  orientation.cpp  quad-transform.cpp  quad-transform.h  screen-detection.cpp  screen-detection.hpp  test-files.hpp  testfiles.cpp  timer.h  timer.hpp
src/json/: jsoncpp.cpp
src/vision/: hand-detection-json.cpp  hand-detection.cpp  hand-detection.hpp  quad-transform.cpp  quad-transform.hpp  screen-detection.cpp
